--- a/_sass/bulma/sass/components/card.sass
+++ b/_sass/bulma/sass/components/card.sass
@@ -1,7 +1,8 @@
 $card-color: $text !default
 $card-background-color: $scheme-main !default
 $card-shadow: 0 0.5em 1em -0.125em rgba($scheme-invert, 0.1), 0 0px 0 1px rgba($scheme-invert, 0.02) !default
-$card-radius: 0 !default
+$card-radius: 0.25rem !default
+$card-overflow: hidden !default
 
 $card-header-background-color: transparent !default
 $card-header-color: $text-strong !default
@@ -20,12 +21,12 @@ $card-media-margin: $block-spacing !default
 
 .card
   background-color: $card-background-color
+  border-radius: $card-radius
   box-shadow: $card-shadow
   color: $card-color
   max-width: 100%
+  overflow: $card-overflow
   position: relative
-  border-radius: $card-radius
-  overflow: hidden
 
 .card-header
   background-color: $card-header-background-color
