--- a/root/src/css/base.css
+++ b/root/src/css/base.css
@@ -11,14 +11,14 @@ hr {
     font-family: "Open Sans";
     font-style: normal;
     font-weight: 400;
-    src: url("../fonts/open-sans-v17-latin-regular.eot");
+    src: url("/fonts/open-sans-v17-latin-regular.eot");
     src: local("Open Sans Regular"), local("OpenSans-Regular"),
-        url("../fonts/open-sans-v17-latin-regular.eot?#iefix")
+        url("/fonts/open-sans-v17-latin-regular.eot?#iefix")
             format("embedded-opentype"),
-        url("../fonts/open-sans-v17-latin-regular.woff2") format("woff2"),
-        url("../fonts/open-sans-v17-latin-regular.woff") format("woff"),
-        url("../fonts/open-sans-v17-latin-regular.ttf") format("truetype"),
-        url("../fonts/open-sans-v17-latin-regular.svg#OpenSans") format("svg");
+        url("/fonts/open-sans-v17-latin-regular.woff2") format("woff2"),
+        url("/fonts/open-sans-v17-latin-regular.woff") format("woff"),
+        url("/fonts/open-sans-v17-latin-regular.ttf") format("truetype"),
+        url("/fonts/open-sans-v17-latin-regular.svg#OpenSans") format("svg");
 }
 
 body {
