--- a/root/src/base.css
+++ b/root/src/base.css
@@ -2,6 +2,10 @@
     padding: 20px;
 }
 
+main {
+    margin: 75px;
+}
+
 @font-face {
     font-family: "Open Sans";
     font-style: normal;
@@ -40,7 +44,7 @@ a {
 
 @media only screen and (max-width: 500px) {
     main {
-        margin: 75px 12.5px;
+        margin: 75px 13px;
     }
 }
 
