--- a/root/src/css/base.css
+++ b/root/src/css/base.css
@@ -35,11 +35,11 @@ h1 {
 }
 
 h2 {
-    margin-top: 36px;
+    margin-top: 8px;
 }
 
 a {
-    color: #3273dc;
+    color: #3273ea;
 }
 
 @media only screen and (max-width: 500px) {
