Numerous changes and seo fixes

--- a/root/src/css/base.css
+++ b/root/src/css/base.css
@@ -186,8 +186,7 @@ a {
 
 @media (prefers-reduced-motion: reduce) {
     #nav-btn,
-    #nav-btn span,
-    .sidebar-nav {
+    #nav-btn span {
         -webkit-transition: 0;
         -moz-transition: 0;
         -o-transition: 0;
