--- a/root/src/css/base.css
+++ b/root/src/css/base.css
@@ -96,7 +96,7 @@ a {
     }
 }
 
-#nav-btn {
+.nav-btn {
     width: 60px;
     height: 35px;
     position: fixed;
@@ -113,9 +113,10 @@ a {
     -o-transition: 0.5s ease-in-out;
     transition: 0.5s ease-in-out;
     cursor: pointer;
+    padding-top: 7px;
 }
 
-#nav-btn span {
+.nav-btn span {
     display: block;
     position: absolute;
     height: 5px;
@@ -134,7 +135,7 @@ a {
     transition: 0.25s ease-in-out;
 }
 
-#nav-btn span:nth-child(1) {
+.nav-btn span:nth-child(1) {
     top: 0;
     -webkit-transform-origin: left center;
     -moz-transform-origin: left center;
@@ -142,7 +143,7 @@ a {
     transform-origin: left center;
 }
 
-#nav-btn span:nth-child(2) {
+.nav-btn span:nth-child(2) {
     top: 15px;
     -webkit-transform-origin: left center;
     -moz-transform-origin: left center;
@@ -150,7 +151,7 @@ a {
     transform-origin: left center;
 }
 
-#nav-btn span:nth-child(3) {
+.nav-btn span:nth-child(3) {
     top: 30px;
     -webkit-transform-origin: left center;
     -moz-transform-origin: left center;
@@ -158,11 +159,11 @@ a {
     transform-origin: left center;
 }
 
-#nav-btn.open span {
+.nav-btn.open span {
     background-color: white;
 }
 
-#nav-btn.open span:nth-child(1) {
+.nav-btn.open span:nth-child(1) {
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
     -o-transform: rotate(45deg);
@@ -171,12 +172,12 @@ a {
     left: 8px;
 }
 
-#nav-btn.open span:nth-child(2) {
+.nav-btn.open span:nth-child(2) {
     width: 0;
     opacity: 0;
 }
 
-#nav-btn.open span:nth-child(3) {
+.nav-btn.open span:nth-child(3) {
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
     -o-transform: rotate(-45deg);
@@ -186,8 +187,8 @@ a {
 }
 
 @media (prefers-reduced-motion: reduce) {
-    #nav-btn,
-    #nav-btn span {
+    .nav-btn,
+    .nav-btn span {
         -webkit-transition: 0;
         -moz-transition: 0;
         -o-transition: 0;
