--- a/root/src/css/base.css
+++ b/root/src/css/base.css
@@ -40,7 +40,7 @@ body {
 
 h1 {
     font-size: 3.75em;
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
 
 h2 {
@@ -225,4 +225,8 @@ a {
 .accordion-heading {
     flex-basis: 33.33%;
     flex-shrink: 0;
+}
+
+.margin-top {
+    margin-top: 8px;
 }
