--- a/src/css/base.css
+++ b/src/css/base.css
@@ -3,23 +3,10 @@ main {
     margin-block-start: 8px;
 }
 
-@font-face {
-    font-family: "Open Sans";
-    font-style: normal;
-    font-weight: 400;
-    src: url("/fonts/open-sans-v17-latin-regular.eot");
-    src: local("Open Sans Regular"), local("OpenSans-Regular"),
-        url("/fonts/open-sans-v17-latin-regular.eot?#iefix")
-            format("embedded-opentype"),
-        url("/fonts/open-sans-v17-latin-regular.woff2") format("woff2"),
-        url("/fonts/open-sans-v17-latin-regular.woff") format("woff"),
-        url("/fonts/open-sans-v17-latin-regular.ttf") format("truetype"),
-        url("/fonts/open-sans-v17-latin-regular.svg#OpenSans") format("svg");
-}
-
 .card {
     padding: 20px;
     margin: 2px;
+    min-height: 175px;
 }
 
 .next-link {
