--- a/src/css/base.css
+++ b/src/css/base.css
@@ -46,8 +46,10 @@ a {
 
 .sidebar-nav {
     height: 100%;
-    width: 0;
     position: fixed;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
     z-index: 1;
     top: 0;
     right: 0;
@@ -57,6 +59,13 @@ a {
     border: 2px white solid;
     border-right: none;
     border-bottom: none;
+}
+
+.sidebar-nav div {
+    align-items: center;
+    margin-left: 16px;
+    display: flex;
+    flex-direction: row;
 }
 
 .sidebar-nav a {
